--- a/testpage.html
+++ b/testpage.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="test page.css">
 </head>
 <body>
-     <center>h1>This is a test page.</h1></center>
+     <center><h1>This is a test page.</h1></center>
 </body>
 </html>
