--- a/testpage.html
+++ b/testpage.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Test Page</title>
+	<meta charset="utf-8">
+	<title>Test page</title>
     <link rel="stylesheet" href="testpage.css">
 </head>
 <body>
-     <center><h1>This is a test page.</h1></center>
+    <h1>This is a test page.</h1>
 </body>
 </html>
